<resources>
    <string name="app_name">GO-App</string>
    <string name="heading">Deine Gruppen</string>
    <string name="members">Members</string>
    <string name="multi_line_group_description">multi line group description ansdjlfvbjldeqbernjbfnqjlenljbqeljbrngjlqrebjnqjenrl sdnfjlqnjgblqe</string>
    <string name="event_name">Event Name</string>
    <string name="einstellungen">Einstellungen</string>
    <string name="profildaten_ndern">Profildaten ändern</string>
    <string name="go_info">Über GO</string>
    <string name="lizenzinformationen">Lizenzinformationen</string>
    <string name="abmelden">Abmelden</string>
    <string name="profil_l_schen">Profil löschen</string>
    <string name="shared_pref_name">USER_DATA</string>
    <string name="user_id">uid</string>
    <string name="user_email">email</string>
    <string name="create_group">Create group</string>
    <string name="group_description">Group description</string>
    <string name="group_name">Group name</string>
    <string name="go_name">Go name</string>
    <string name="go_description">Go description</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="go_added_intent_action">go_added</string>
    <string name="create_a_new_go">Create a new GO</string>
    <string name="choose_your_location">Choose your location</string>
    <string name="edit_user_data">Edit user data</string>
    <string name="license">License</string>
    <string name="log_out">Log out</string>
    <string name="delete_profile">Delete profile</string>
    <string name="about_text">GO-App is an app designed for organizing meetings with people. It will manage your groups and events. It makes finding your friends easier by colelcting their locations and showing them on the map.</string>
    <string name="license_text">Sample License text. I don\'t really know what should go in here. And it does not really matter right now.</string>
    <string name="permission_required_toast">Permission required</string>
    <string name="permission_rationale_location">Permission rationale</string>
    <string name="location_permission_denied">Permission was denied</string>
    <string name="decline">Decline</string>
    <string name="accept">Accept</string>
    <string name="user_display_name">display_name</string>
    <string name="limit_of_group_members"> of 50</string>
    <string name="accept_dialog_title">Accept request?</string>
    <string name="dialog_explanation_message">You have been invited to this group. Do you accept the request?</string>
    <string name="remove_user">Remove user</string>
    <string name="edit_dialog_current_group_name_key">Current text</string>
    <string name="edit_dialog_current_descr_key">Current description</string>
</resources>
